examples/kustom-webapp/overlays/prod/replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mywebapp
spec:
  replicas: 4
